# -DPO

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/docx/: SKILL.md
.claude/skills/dpo-ocr/: SKILL.md
.claude/skills/dpo-redaction/: SKILL.md
.claude/skills/dpo-review/: SKILL.md
.claude/skills/pdf/: SKILL.md
.claude/skills/pptx/: SKILL.md
examples/: make_samples.py  sample_contract.docx  sample_contract.txt  sample_report.pptx  sample_scan.png.ocr.json
src/dpo_agent/: __init__.py  agent_runner.py  app.py  claude_detect.py  cli.py  detectors.py  document_io.py  pipeline.py  redactors.py  report.py  schemas.py
src/dpo_agent/ocr/: __init__.py  base.py  glm_ocr.py  mock_ocr.py
src/dpo_agent/tools/: ocr_tool.py  redaction_tool.py
tests/: test_detectors.py  test_glm_ocr.py  test_pipeline.py  test_redactors.py
